--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="hi_row">
             <div class="hi_body">
               <div class="hi_image">
-                <img src="images/logo.png" alt="Логотип РемСтрой46">
+                <img src="/images/logo.png" alt="Логотип РемСтрой46">
               </div>
             </div>
             <div class="hi_title">
