--- a/index-4.html
+++ b/index-4.html
@@ -100,7 +100,7 @@
         </div>
         <div class="content_contacts_text_row">
           <div class="h3">
-            <h3> Вы всегда можете получить поддержку по всем вопросам от:
+            <h3> Вы всегда можите получить поддержку по всем вопросам от:
             </h3>
           </div>
         </div>
